# tesseract-jax

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pr.md  pyproject.toml  requirements.txt  ruff.toml  test.ipynb  test.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: benchmarks.yml  build_docs.yml  bump_lockfile.yml  pre-commit-cron-updater.yml  pre_commit.yml  publish.yml  release.yml  run_tests.yml  test_examples.yml  test_pip_install.yml
benchmarks/: .gitignore  compare_benchmarks.py  conftest.py  pytest.ini  test_benchmarks.py  test_casting.py  test_noop.py  test_noop_docker.py  test_noop_http.py  test_vectoradd.py
benchmarks/tesseract_noop/: tesseract_api.py  tesseract_config.yaml
demo/cfd/: Readme.md  demo.ipynb  requirements.txt
demo/simple/: demo.ipynb
docs/: conf.py  index.md
docs/_templates/: page.html
docs/content/: api.md  debugging.md  differentiation.md  get-started.md  handling-differentiability.md  index.md  input-output-schemas.md  vmap-methods.md
examples/: README.md
examples/ansys/: Readme.md  _version.py  bars_mesh.vtk  demo.ipynb  demo_2.ipynb  fem_shapeopt_mesh.vtk  fem_shapeopt_mesh1.vtk  forum.md  gf.py  grid_mesh.vtk  optim_bars.ipynb  optim_bars_pymapdl.ipynb  optim_grid.ipynb  pyvista_jaxfem.ipynb  pyvista_pymapdl.ipynb  spaceclaim_jaxfem.ipynb  spaceclaim_pymapd.ipynb  spaceclaim_pymapdl.ipynb  utils.py
examples/cfd/: demo.ipynb  requirements.txt
examples/fem-shapeopt/: demo.ipynb  fem_shapeopt_mesh.vtk  gf.py  hex.py  requirements.txt
examples/helmholtz/: OPTIMIZATION_RECOVERY.md  README.md  deform_source_mesh_to_target_mesh.ipynb  experiments.py  helmholtz_impedance.py  losses.py  main.py  mesh_acoustic_optimization.ipynb  mesh_acoustic_optimization_Zonly.ipynb  mesh_acoustic_optimization_multiband.ipynb  mesh_setup.py  neurips_workshop_paper.tex  neurips_workshop_paper_backup.tex  problems.py  visualization.py
examples/simple/: demo.ipynb
tesseract_jax/: __init__.py  _version.py  batching.py  primitive.py  sow.py  tesseract_compat.py  tree_util.py
tests/: conftest.py  test_api.py  test_endtoend.py  test_jacobian_batching.py  test_sow.py
tests/batched_tesseract/: tesseract_api.py  (+2 more)
(+92 files in other folders)
