[project]
name = "tesseract-jax"
description = "Tesseract JAX executes Tesseracts as part of JAX programs, with full support for function transformations like JIT, `grad`, and more."
readme = "README.md"
authors = [
    {name = "The tesseract-jax team @ Pasteur Labs", email = "info@simulation.science"},
]
requires-python = ">=3.12,<3.15"
# TODO: add your dependencies here *and* in requirements.txt
dependencies = [
    "jax>=0.7.0",
    "tesseract-core",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pasteurlabs/tesseract-jax"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_autodoc_typehints",
    "furo",
    "myst-nb",
    "sphinx_copybutton",
    "sphinx_design",
    "sphinxext_opengraph",
    "tesseract-core[runtime]",
]
# TODO: add dev dependencies here *and* in requirements-dev.txt
dev = [
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "typeguard",
    "requests",
    "equinox",
    "tesseract-core[runtime]",
    "tesseract-jax[docs]",
]

[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools-scm!=9.0.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tesseract_jax/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["tesseract_jax"]

[tool.hatch.build.targets.sdist]
include = [
    "tesseract_jax/",
    "examples/",
    "requirements.txt",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
addopts = ["--typeguard-packages=tesseract_jax"]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # ignored by default
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    # raised by Cython, usually harmless
    "ignore:numpy.dtype size changed",
    "ignore:numpy.ufunc size changed",
    # sometimes, dependencies leak resources
    "ignore:.*socket\\.socket.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["tesseract_jax"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
ignore_errors = true
omit = [
    "tesseract_jax/_version.py",
]
